enhanced configuration